feat: add study stats to tema and disciplina endpoints, enrich nested DTOs
- Add totalEstudos, ultimoEstudo, totalSubtemas, subtemasEstudados to TemaSummaryDto/TemaDetailDto
- Add totalEstudos, ultimoEstudo, totalTemas, totalSubtemas, temasEstudados, subtemasEstudados to DisciplinaSummaryDto/DisciplinaDetailDto
- TemasEstudados counts temas where ALL subtemas have been studied at least once
- Add batch queries to EstudoSubtemaRepository, SubtemaRepository, TemaRepository for efficient enrichment
- Enrich nested disciplina in TemaDetailDto and nested tema in SubtemaDetailDto
- Update all controller Swagger examples with new fields
- Update TemaServiceTest, DisciplinaServiceTest, TemaControllerTest, DisciplinaControllerTest, SubtemaStudyControllerTest with new field assertions